[project]
name = "rlm-bench"
version = "0.1.0"
description = "Benchmarking Recursive Language Models as a drop-in agent tool for python coding assistant"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pdfplumber>=0.11.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "httpx>=0.27.0",
    "deepeval>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.urls]
Repository = "https://github.com/[mohit-awana]/rlm-bench"

[project.scripts]
rlm-bench-run   = "benchmark.runner:main"
rlm-bench-eval  = "benchmark.evaluator:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rlm", "tools", "rag", "benchmark"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
